# document-ingestion-pipeline

./: .env.example  .gitignore  README.md  main.py  poc_pipeline.py  pyproject.toml
prompts/: keywords_v1.txt  metadata_v1.txt  questions_v1.txt  summarization_v1.txt
sample_data/: sample.txt
src/: chunker.py  config.py  enricher.py  llm_provider.py  query.py  storage.py
