[project]
name = "doccumentpipelineingestionflow"
version = "0.1.0"
description = "Document ingestion pipeline POC: parse text/PDF, chunk with multiple strategies, enrich via LLM, store in Chroma"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "chromadb>=1.5.2",
    "portkey-ai>=1.0.0",
    "nltk>=3.9.3",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "tiktoken>=0.12.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
